--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
+    "react-facebook-login": "^4.1.1",
     "react-router-dom": "^7.7.0",
     "web-vitals": "^2.1.4"
   },
