--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,39 @@
-django==5.2.4
+asgiref==3.9.1
+certifi==2025.8.3
+cffi==1.17.1
+charset-normalizer==3.4.2
+colorama==0.4.6
+cors==1.0.1
+cryptography==45.0.5
+defusedxml==0.7.1
+Django==5.2.4
+django-cors-headers==4.7.0
+djangorestframework==3.16.0
+drf-yasg==1.21.10
+filelock==3.18.0
+future==1.0.0
+gevent==25.5.1
+greenlet==3.2.3
+idna==3.10
+inflection==0.5.1
+oauthlib==3.3.1
+packaging==25.0
+pycparser==2.22
+PyJWT==2.10.1
+PySocks==1.7.1
+python3-openid==3.2.0
+pytz==2025.2
+PyYAML==6.0.2
+requests==2.32.4
+requests-file==2.1.0
+requests-oauthlib==2.0.0
+rest_social_auth==9.0.0
+setuptools==80.9.0
+social-auth-app-django==5.5.1
+social-auth-core==4.7.0
+sqlparse==0.5.3
+tldextract==5.3.0
+uritemplate==4.2.0
+urllib3==2.5.0
+zope.event==5.1.1
+zope.interface==7.2
