--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,8 @@
 {
   "name": "frontend",
+  "resolutions": {
+    "@fluentui/react-component-ref": "6.0.0"
+  },
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,12 +10,13 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.7",
-    "react": "^19.1.0",
-    "react-bootstrap": "^2.10.10",
-    "react-dom": "^19.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+
     "react-facebook-login": "^4.1.1",
-    "react-router-dom": "^7.7.0",
+    "react-router-dom": "^7.9.3",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,8 +45,7 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^7.0.0",
-    "axios": "^1.10.0",
-    "mdb-react-ui-kit": "^9.0.0",
+    "axios": "^1.12.2",
     "react-scripts": "^5.0.1"
   }
 }
