--- a/library_app/requirements.txt
+++ b/library_app/requirements.txt
@@ -28,6 +28,7 @@ defusedxml==0.7.1
 diffusers==0.32.2
 distro==1.9.0
 Django==5.2.4
+django-cors-headers==4.9.0
 django-debug-toolbar==6.0.0
 django-environ==0.12.0
 django-filter==25.2
@@ -90,7 +91,6 @@ pluggy==1.5.0
 preshed==3.0.9
 protobuf==5.29.3
 psutil==6.1.1
-psycopg2==2.9.10
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
@@ -103,9 +103,6 @@ PyJWT==2.10.1
 PyMySQL==1.1.1
 pyodbc==5.2.0
 pyparsing==3.2.3
-PyQt5==5.15.11
-PyQt5-Qt5==5.15.15
-PyQt5_sip==12.15.0
 pytest==8.3.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -132,9 +129,6 @@ sniffio==1.3.1
 social-auth-app-django==5.5.1
 social-auth-core==4.7.0
 soupsieve==2.7
-spacy==3.7.6
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
 sqladmin==0.20.1
 SQLAlchemy==2.0.38
 sqlparse==0.5.3
@@ -142,9 +136,7 @@ srsly==2.4.8
 starlette==0.41.3
 sympy==1.13.1
 tenacity==8.5.0
-thinc==8.2.5
 threadpoolctl==3.6.0
-tokenizers==0.21.0
 torch==2.5.1
 torchaudio==2.5.1
 torchvision==0.20.1
@@ -163,7 +155,7 @@ websockets==15.0.1
 Werkzeug==3.1.3
 wheel==0.44.0
 wrapt==1.16.0
-WTForms==3.2.1
+WTForms==3.1
 xgboost==3.0.3
 XlsxWriter==3.2.2
 zipp==3.21.0
